packages/llvm/src/tests/js_loop/snapshots/llvm__tests__js_loop__do_while_loop__    const x = 0;    do {        continue    } while (x !== 1).snap
---
source: packages/llvm/src/tests/js_loop/do_while_loop.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %"x|_|" = alloca double, align 8
  store double 0.000000e+00, double* %"x|_|", align 8
  br label %Block_0

Block_0:                                          ; preds = %Block_1, %entry
  br label %Block_1
  br label %Block_1

Block_1:                                          ; preds = %Block_0, %Block_0
  %"2" = load double, double* %"x|_|", align 8
  %"1" = fcmp one double %"2", 1.000000e+00
  br i1 %"1", label %Block_0, label %Block_2

Block_2:                                          ; preds = %Block_1
  ret void
}

